--- a/lists.html
+++ b/lists.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="lists.css">
+    <link rel="stylesheet" href="css/lists.css">
     <title>To-Do List App</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
             </li>
         </ul>
     </div>
-    <script src="lists.js"></script>
+    <script src="javascript/lists.js"></script>
 
 </body>
 </html>
